Gradle: Fix to include same files as Ant
The usecase of someone unpacking the JAR to view the GPL is
100% academic IMHO.
And the GPL is visible/bundled in all places where we publish JARs, no
need to put it here.

There's a technical reason for not bundling it though:
The Ant builder doesn't seem to bundle it either, so not bundling it
will simplify my upcoming script to verify the Gradle output against
Ant.

--- a/build.gradle
+++ b/build.gradle
@@ -67,11 +67,7 @@ task("$jarType", type: Jar, overwrite: true, dependsOn: ['compileJava', 'compile
     destinationDir = new File(projectDir, (jarType == 'testJar') ? "build-test" : "dist")
     
     from sourceSets.main.output.classesDir
-    from(sourceSets.main.java.srcDirs) {
-        include 'plugins/WebOfTrust/gpl.txt'
-        include 'plugins/WebOfTrust/l10n/*.l10n'
-    }
-    
+    from(sourceSets.main.java.srcDirs) { include 'plugins/WebOfTrust/l10n/*.l10n' }
     from zipTree('db4o-7.4/db4o.jar')
     if(jarType == 'testJar') from sourceSets.test.output.classesDir
     
