--- a/build.gradle
+++ b/build.gradle
@@ -103,10 +103,7 @@ test {
         exclude '**/TickerDelayedBackgroundJobTest.class'
     }
     
-    // TODO: Performance: Why doesn't this work on Travis CI?
-    // Says: Could not set unknown property 'failFast' ...
-    // failFast = true
-
+    // failFast = true // TODO: Performance: As of 2018-10-03 doesn't work on Travis CI yet
     maxHeapSize = "512m"
     maxParallelForks = Runtime.runtime.availableProcessors()
     doFirst { println 'Max test threads (can be limited by worker count): ' + maxParallelForks }
