Gradle: Rename variable to improve readability

--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,10 @@ task compileDb4o(type: Exec) {
 	                   "-Djavac.target.version=" + targetCompatibility
 }
 
-def version_buildir = "${buildDir}/tmp/compileVersionFile/"
+def version_src_dir = "${buildDir}/tmp/compileVersionFile/"
 
 task prepareVersionFile(type: Copy) {
-    from sourceSets.main.java.srcDirs ; into "${version_buildir}"
+    from sourceSets.main.java.srcDirs ; into "${version_src_dir}"
     include 'plugins/WebOfTrust/Version.java' ; filter {
         String line -> line.replaceAll("@custom@",
             "git describe --always --abbrev=4 --dirty".execute().text.trim())
@@ -39,7 +39,7 @@ task prepareVersionFile(type: Copy) {
 
 task compileVersionFile(type: JavaCompile, dependsOn: 'prepareVersionFile') {
     classpath = sourceSets.main.compileClasspath
-    source = "${version_buildir}"
+    source = "${version_src_dir}"
     destinationDir = file("${buildDir}/version/")
 }
 
