Gradle: Fix compileJava failing due to other classes missing class Version

--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,12 @@ task compileDb4o(type: Exec) {
 
 compileJava {
 	dependsOn 'compileDb4o'
-	exclude 'plugins/WebOfTrust/Version.java'
 }
 
 task prepareVersionFile(type: Copy) {
+	doFirst { delete new File(sourceSets.main.output.classesDir,
+		'/plugins/WebOfTrust/Version.class') }
+
     from sourceSets.main.java.srcDirs ; into "${buildDir}/custom/versionFileJava/"
     include 'plugins/WebOfTrust/Version.java' ; filter {
         String line -> line.replaceAll("@custom@",
