Gradle: Reduce LOC

--- a/build.gradle
+++ b/build.gradle
@@ -88,9 +88,7 @@ test {
     // failFast = true // TODO: Performance: As of 2018-10-03 doesn't work on Travis CI yet
     maxHeapSize = "512m"
     maxParallelForks = Runtime.runtime.availableProcessors()
-    // Don't run multiple tests in the same VM: WoT, db4o and Freenet are to complex to be able to
-    // tell whether this is safe. Also this is likely needed for maxParallelForks to actually work.
-    forkEvery = 1
+    forkEvery = 1 // One VM per test, for safety and probably needed for maxParallelForks to work
     systemProperties += [
         "is_WOT_unit_test": "true",
         "WOT_test_jar": testJarFile
