Gradle: Reduce LOC

--- a/build.gradle
+++ b/build.gradle
@@ -102,8 +102,7 @@ test {
 }
 
 clean {
-	delete "${projectDir}/build-test"
-	delete "${projectDir}/test-coverage" // From Ant
-	delete "${projectDir}/dist"
+	[ 'build-test', 'test-coverage', 'dist' ].each { // Same dirs as Ant to delete its output too
+		delete "${projectDir}/" + it }
 	exec { workingDir 'db4o-7.4' ; commandLine 'ant','clean' }
 }
