Gradle: Obey line length limit

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ javadoc.enabled = false
 
 configurations { junit } // Needed when we manually specify the tests' classpath
 dependencies {
-	// TODO: Code quality: Use Gradle's native dependency management + gradle-witness instead of flat files
+	// TODO: Code quality: Use Gradle's dependency management + gradle-witness instead of flat files
 	// Postponing this until I know how to import fred's dependency list to avoid duplicating it.
 	
 	// Run fred's Gradle with "./gradlew jar copyRuntimeLibs" to produce this directory
