Gradle: Fix to not always rebuild db4o, which broke our own incremental building
Currently the db4o Ant build script is incapable of incremental builds,
so it will always change the JAR.
That in turn would cause Gradle to always consider the input of our
compile tasks to be dirty and rebuild everything.

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 }
 
 task compileDb4o(type: Exec) {
+	outputs.upToDateWhen { file('db4o-7.4/db4o.jar').exists() } // FIXME: Replace w/ incremental Ant
 	workingDir 'db4o-7.4'
 	commandLine 'ant', "-Djavac.source.version=" + sourceCompatibility,
 	                   "-Djavac.target.version=" + targetCompatibility
