Revert "Travis CI: Use Gradle from fred as the one of Travis is very outdated"
This reverts commit 378ad8474406c373b9c9d2c0df2aa26e61d73d80.

Will ship this in a separate branch.

--- a/.travis.yml
+++ b/.travis.yml
@@ -87,11 +87,10 @@ script:
   # Don't allow Travis to override the low memory limit which our builder sets with a higher one.
   - unset _JAVA_OPTIONS
   # Use Gradle to run the unit tests as it supports using multiple CPU cores...
-  - ln -sf ../fred/gradlew
-  - ./gradlew clean test
+  - gradle clean test
   # ... and Ant to produce the actual JAR as my Gradle script is still experimental.
   # FIXME: Test whether Gradle's JAR is binary identical so we can consider it as stable.
-  - ./gradlew clean
+  - gradle clean
   - ant -Dtest.skip=true
 
 jdk:
