--- a/.travis.yml
+++ b/.travis.yml
@@ -86,7 +86,6 @@ script:
   - ant
 
 jdk:
-  - oraclejdk10
   - oraclejdk9
   - oraclejdk8
   - openjdk10
@@ -95,6 +94,7 @@ jdk:
   - openjdk7
   # oraclejdk11: As of 2018-09-26 fred's Gradle fails with: "Could not determine java version from '11'."
   # openjdk11:   As of 2018-09-26 fred's Gradle fails with: "Could not determine java version from '11'."
+  # oraclejdk10: Not supported anymore: https://changelog.travis-ci.com/stop-a-job-early-if-a-deprecated-jdk-is-configured-76612
   # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
 
 deploy:
