Revert "Travis CI: Try if Java 11 works with fred now"
This reverts commit 877b54230fe13b1bb32ea43c7189f82bc1b960fb.

Still fails: https://travis-ci.org/xor-freenet/plugin-WebOfTrust/builds/448747955
Gradle says:
> Could not determine java version from '11.0.1'.

--- a/.travis.yml
+++ b/.travis.yml
@@ -86,14 +86,14 @@ script:
   - ant
 
 jdk:
-  - oraclejdk11
   - oraclejdk9
   - oraclejdk8
-  - openjdk11
   - openjdk10
   - openjdk9
   - openjdk8
   - openjdk7
+  # oraclejdk11: As of 2018-09-26 fred's Gradle fails with: "Could not determine java version from '11'."
+  # openjdk11:   As of 2018-09-26 fred's Gradle fails with: "Could not determine java version from '11'."
   # oraclejdk10: Not supported anymore: https://changelog.travis-ci.com/stop-a-job-early-if-a-deprecated-jdk-is-configured-76612
   # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
 
