Travis CI: Test compare-gradle-jars-with-ant-jars
The compare-gradle-tests-with-ant-tests did work now:
	https://travis-ci.org/xor-freenet/plugin-WebOfTrust/builds/487984578
- so lets test the JAR version of the script.

The code added to the *-jars-* script was taken from the *-tests-*
script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,8 @@ script:
 
   # Use the same Gradle as fred to re-use the fixes we applied to it above
   - ln -s "$TRAVIS_BUILD_DIR/../fred/gradlew"
-  - tools/compare-gradle-tests-with-ant-tests
+  - tools/compare-gradle-jars-with-ant-jars
+  ## - tools/compare-gradle-tests-with-ant-tests
 
 jdk:
   - oraclejdk9
