Travis CI: Fix deployment
"condition" consumes the content of a bash "[[ ]]" test:
https://docs.travis-ci.com/user/deployment#conditional-releases-with-on

Those need their right-hand side quoted:
https://mywiki.wooledge.org/BashPitfalls#A.5B_.24foo_.3D_.22bar.22_.5D

--- a/.travis.yml
+++ b/.travis.yml
@@ -121,4 +121,4 @@ deploy:
   script: ./.travis.upload-jar-to-freenet.sh
   on:
     all_branches: true
-    jdk: openjdk$FREENET_MINIMUM_JAVA_VERSION
+    condition: $TRAVIS_JDK_VERSION = "openjdk$FREENET_MINIMUM_JAVA_VERSION"
