Gradle: Move FIXME to bugtracker

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ dependencies {
 }
 
 task compileDb4o(type: Exec) {
-	outputs.upToDateWhen { file('db4o-7.4/db4o.jar').exists() } // FIXME: Replace w/ incremental Ant
+	// See https://bugs.freenetproject.org/view.php?id=7058
+	outputs.upToDateWhen { file('db4o-7.4/db4o.jar').exists() }
 	workingDir 'db4o-7.4'
 	commandLine 'ant', "-Djavac.source.version=" + sourceCompatibility,
 	                   "-Djavac.target.version=" + targetCompatibility
