Travis CI: Use newer Ubuntu version so Gradle is capable of failFast and to fix weird failures during openjdk installation
failFast: d86fe7342bc0c3d21388cb807b85b46b42f14d74
openjdk failure:
https://travis-ci.org/xor-freenet/plugin-WebOfTrust/jobs/525478782

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: java
 
-# We need Ubuntu 14.04 due to very new JUnit API which WoT needs
-dist: trusty
+dist: xenial
 # Disabling sudo routes the build to a Docker container instead of a VM
 # which speeds up the build.
 sudo: false
