Revert "Travis CI: Use newer Ubuntu version [...]", breaks Java 7 and doesn't fix what it intended to fix
This reverts commit c6e73379eb049abcddef343dc6d18bc31789b02b.

Breaks Java 7:
https://travis-ci.org/xor-freenet/plugin-WebOfTrust/jobs/525479801
> Expected feature release number in range of 9 to 13, but got: 7

Doesn't fix the installation issues of the other Java versions.
According to the following question the download issues are due to
Oracle using an invalid TLS certificate:
https://stackoverflow.com/questions/55878548/travis-ci-couldnt-install-openjdk11

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 
-dist: xenial
+# We need Ubuntu 14.04 due to very new JUnit API which WoT needs
+dist: trusty
 # Disabling sudo routes the build to a Docker container instead of a VM
 # which speeds up the build.
 sudo: false
