--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,7 @@ test {
 		exclude '**/TickerDelayedBackgroundJobTest.class'
 	}
 	
-	failFast = true
+	// failFast = true // TODO: Performance: As of 2018-10-03 doesn't work on Travis CI yet
 	maxHeapSize = "512m"
 	maxParallelForks = Runtime.runtime.availableProcessors()
 	forkEvery = 1 // One VM per test, for safety and probably needed for maxParallelForks to work
