--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,10 @@ test {
 		exclude '**/TickerDelayedBackgroundJobTest.class'
 	}
 	
-	// failFast = true // TODO: Performance: As of 2018-10-03 doesn't work on Travis CI yet
+	/* TODO: Performance: As of 2019-04-28 doesn't work on Travis CI yet because the Gradle version
+	/* on Ubuntu Trusty is too old - and we cannot use Ubuntu Xenial because Java 7 doesn't work
+	/* there but it is still the minimal Java version required by Freenet. */
+	// failFast = true
 	maxHeapSize = "512m"
 	maxParallelForks = Runtime.runtime.availableProcessors()
 	forkEvery = 1 // One VM per test, for safety and probably needed for maxParallelForks to work
