--- a/.travis.yml
+++ b/.travis.yml
@@ -108,10 +108,10 @@ jdk:
   - openjdk8
   - openjdk9
   - openjdk10
+  - openjdk11
   - oraclejdk8
   - oraclejdk9
-  # oraclejdk11: As of 2018-09-26 fred's Gradle fails with: "Could not determine java version from '11'."
-  # openjdk11:   As of 2018-09-26 fred's Gradle fails with: "Could not determine java version from '11'."
+  - oraclejdk11
   # oraclejdk10: Not supported anymore: https://changelog.travis-ci.com/stop-a-job-early-if-a-deprecated-jdk-is-configured-76612
   # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
 
