--- a/.travis.yml
+++ b/.travis.yml
@@ -109,9 +109,11 @@ jdk:
   - openjdk9
   - openjdk10
   - openjdk11
+  - openjdk12
   - oraclejdk8
   - oraclejdk9
   - oraclejdk11
+  - oraclejdk12
   # oraclejdk10: Not supported anymore: https://changelog.travis-ci.com/stop-a-job-early-if-a-deprecated-jdk-is-configured-76612
   # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
 
