--- a/.travis.yml
+++ b/.travis.yml
@@ -113,7 +113,7 @@ jdk:
   - oraclejdk8
   - oraclejdk9
   - oraclejdk11
-  - oraclejdk12
+  # oraclejdk12: Not available on Travis CI as of 2019-05-04, was released 2019-03.
   # oraclejdk10: Not supported anymore: https://changelog.travis-ci.com/stop-a-job-early-if-a-deprecated-jdk-is-configured-76612
   # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
 
