Travis CI: Trim build matrix: Disable oraclejdk9, isn't updated anymore

--- a/.travis.yml
+++ b/.travis.yml
@@ -112,7 +112,7 @@ jdk:
   - openjdk12
   # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
   - oraclejdk8
-  - oraclejdk9
+  # oraclejdk9: No more updates by Oracle: https://www.oracle.com/technetwork/java/java-se-support-roadmap.html
   # oraclejdk10: Not supported anymore: https://changelog.travis-ci.com/stop-a-job-early-if-a-deprecated-jdk-is-configured-76612
   - oraclejdk11
   # oraclejdk12: Not available on Travis CI as of 2019-05-04, was released 2019-03.
